<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="headerAllPageEnglish">CIVIL  SUPPLIES  AND  CONSUMER  PROTECTION  DEPARTMENT</string>
    <string name="headerAllPage">உணவுப் பொருள் வழங்கல் மற்றும் நுகர்வோர் பாதுகாப்புத் துறை</string>
    <string name="crashmsg">Temporarily Service stopped</string>
    <string name="technicalFault">session timeout. Please try again or contact helpdesk</string>
    <string name="loginPageCopyright">Copyright \u00A9 2015 TNPDS | Help Desk - 1967 / 1800-425-5901 | </string>
    <string name="app_name">WholesalerApp</string>
    <string name="onlineText">OnLine</string>
    <string name="offlineText">OffLine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="noFileSdcard"> No file in sdcard back up</string>
    <string name="oldDbBackup">Existing database copied into backup folder</string>
    <string name="backupFolderNot"> backup folder is not created</string>
    <string name="connectionError">Connection Error. Please try again</string>
    <string name="connectionRefused">Server Connection Error</string>
    <string name="pds">PUBLIC DISTRIBUTION SYSTEM</string>
    <string name="wholesale">Kerosene Wholesale Application</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password</string>
    <string name="contactHelpDesk">To reset your password,Contact Helpdesk Support</string>
    <string name="ok">OK</string>
    <string name="helpDeskNumber">1967 / 1800-425-5901</string>
    <string name="changeUrl">Change URL</string>
    <string name="cancel">Cancel</string>
    <string name="deviceId">Device No</string>
    <string name="device_details">Device Details</string>
    <string name="languageSelection">Select Language</string>
    <string name="languageSelectionTa">மொழித் தேர்வு</string>
    <string name="languageChange">Select Language</string>
    <string name="tamil">தமிழ்</string>
    <string name="publicUrl">Change URL </string>
    <string name="serviceNotAvailable">Service not available. Please try again</string>
    <string name="inCorrectUnamePword">Incorrect Username and Password</string>
    <string name="loginUserNameEmpty">Username should not be empty</string>
    <string name="loginPasswordEmpty">Password should not be empty</string>
    <string name="noNetworkConnection">No Network Connection</string>
    <string name="storeInactive">Store inactive</string>
    <string name="loginInvalidUserPassword">Invalid Username or Password</string>
    <string name="hashMethod">SHA-256</string>
    <string name="hashIterations">1000</string>
    <string name="saltSize">10</string>
    <string name="poolSize">16</string>
    <string name="deviceRegistration">Device is registered.Contact HelpDesk</string>
    <string name="outwardKerocene">Kerosene Outward</string>
    <string name="allocation">Allocation</string>
    <string name="transactions">Transactions</string>
    <string name="stockPositions">Stock Positions</string>
    <string name="associatedShops">Associated Shops</string>
    <string name="logout">Logout</string>
    <string name="logoutString">Do you want to logout?</string>
    <string name="sales">Continue</string>
    <string name="caution">Caution</string>
    <string name="timeDiff">Time difference between server and device </string>
    <string name="nextDay">next day</string>
    <string name="changeTime">Click ok to change time</string>
    <string name="welcome_view">Welcome,</string>
    <string name="last_login">Last Login :</string>
    <string name="wholesale_profile"> Profile Info</string>
    <string name="wholesale_code">Wholesaler Code  </string>
    <string name="reference_no">Ref No:</string>
    <string name="date">Date :</string>
    <string name="kerosene">Kerosene</string>
    <string name="outwardTo">Outward To *</string>
    <string name="selectCode">Select Code *</string>
    <string name="selectCode1">Select Code</string>
    <string name="selectProductType">Select Product Type </string>
    <string name="ProductType">Product Type *</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="selectQuanity">Enter Qty *</string>
    <string name="ltrs">Ltrs</string>
    <string name="vehicleNo">Vehicle Number *</string>
    <string name="name">Name</string>
    <string name="driverName">Driver Name</string>
    <string name="driverContactNumber">Driver Mobile Number *</string>
    <string name="dashboard">Dashboard</string>
    <string name="outward">Kerosene Outward</string>
    <string name="outwardUpdatedSuccessfully">Outward posted successfully</string>
    <string name="selectRecipientType">Select Recipient Type</string>
    <string name="selectRecipientCode">Select Recipient Code</string>
    <string name="enterQuantity">Enter Quantity</string>
    <string name="enterVehicleNumber">Enter Vehicle Number</string>
    <string name="enterDriverName">Enter Driver Name</string>
    <string name="enter10digitMobileNumber">Enter 10 digit Mobile Number</string>
    <string name="invalidMobileNumber">Invalid Mobile Number</string>
    <string name="transporterName">Transporter Name</string>
    <string name="code">  Code</string>
    <string name="noShopsAvailable">Enter shop code</string>
    <string name="edit">Edit</string>
    <string name="productType">Product Type *</string>
    <string name="productQuantity">Quantity</string>
    <string name="totalTransaction">Total Transactions :</string>
    <string name="transNo">Trans.No</string>
    <string name="dates">Date</string>
    <string name="no_records">No Transactions Found</string>
    <string name="select_fromdate">Please select From date</string>
    <string name="select_todate">Please select To date</string>
    <string name="date_validation">From date is greater than To date</string>
    <string name="serviceTimeout" tools:ignore="MissingTranslation">300000</string>
    <string name="close">Close</string>
    <string name="inCorrectUserCredential">User does not have credentials</string>
    <string name="deviceInvalid">Device inactive</string>
    <string name="unassociated">Device is Unassociated to any Store</string>
    <string name="status"> Wholesaler Status</string>
    <string name="errorUpgrade">Error in Upgrade.Contact Helpdesk</string>
    <string name="downloadgingFile" tools:ignore="MissingTranslation">Downloading…</string>
    <string name="internalError">Internal Error</string>
    <string name="externalStorageNotWritable">Sdcard is not writable</string>
    <string name="externalStorageNotAvailable">Sdcard is not available</string>
    <string name="noFreeInSdcard">No free space available in sdcard</string>
    <string name="restoreHead">Backup Wholesaler database</string>
    <string name="retrieveDbString">Retrieve  Wholesaler  database into sdcard</string>
    <string name="restorationDbString">Restore db file from sdcard backup folder </string>
    <string name="restoration">Restore DB</string>
    <string name="retrieve">Retrieve DB</string>
    <string name="invalidQuantity">Invalid Quantity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="statistics">System Statistics</string>
    <string name="geolocation">Geo Co-Ordinates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successInUpdate">Location Updated Successfully</string>
    <string name="end_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="sync">Synced Bills</string>
    <string name="unsync">UnSynced Bills</string>
    <string name="userInactive">User inactive</string>
    <string-array name="custom_months">
        <item>JAN</item>
        <item>Feb</item>
        <item>MARCH</item>
        <item>April</item>
        <item>MAY</item>
        <item>June</item>
        <item>JULY</item>
        <item>Aug</item>
        <item>SEPT</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>DEC</item>
    </string-array>
    <string-array name="custom_weekdays">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="shopcode">Shop Code</string>
    <string name="shoptype">Shop Type</string>
    <string name="shopname">Shop Name</string>
    <string name="contactname">Contact Name</string>
    <string name="contactnunver">Contact Number</string>
    <string name="filter">Filter</string>
    <string name="profile">Wholesaler Profile</string>
    <string name="whole_mobile_no">Wholesaler Contact Number</string>
    <string name="whole_seller_name">Wholesaler Person Name</string>
    <string name="whole_address"> Wholesaler Address</string>
    <string name="profile1">Wholesaler Profile </string>
    <string name="wholecode">Wholesaler code</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
</resources>