<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sync_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/logo"
                android:id="@+id/ivLogo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pds"
                android:textColor="#CC0033"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:id="@+id/titlePds"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wholesale"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20dp"
                android:id="@+id/titleWholesaleApp"/>

            <TextView
                android:id="@+id/textRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/deviceRegistration"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login"
                android:onClick="registrationStatus"
                android:text="@string/status"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff" />


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>