<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/status_text">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/loginBackground"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewNwTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/caution"
                android:textColor="@color/status_text"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_layout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvloginBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timeDiff"
                android:textColor="@color/ash"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/serverTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nextDay"
                android:textColor="@color/ash"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/deviceTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nextDay"
                android:textColor="@color/ash"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeTime"
                android:textColor="@color/ash"
                android:textSize="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middle_layout"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp">


            <Button
                android:id="@+id/buttonYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/loginBackground"
                android:text="@string/ok"
                android:textColor="@color/status_text"
                android:textSize="15dp" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>