<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_text"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/crash_page_border"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pds"
                android:textColor="#CC0033"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/wholesale"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/internalError"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/internalError"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/technicalFault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/faulttext"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/ress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login"
                    android:gravity="center"
                    android:onClick="continueLogin"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:text="@string/close"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>