<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/status_text">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/loginBackground"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewNwTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/languageChange"
                android:textColor="@color/status_text"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_layout"
            android:gravity="center"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="English"
                />
            <ToggleButton
                android:id="@+id/changeLanguage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/toggle_selector"

                android:textOff=""
                android:textOn=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/tamil"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/middle_layout"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonNwCancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/cancelbackground"
                android:textColor="@color/status_text"
                android:layout_marginRight="10dp"
                android:textSize="15dp"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/buttonNwOk"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@color/loginBackground"
                android:textColor="@color/status_text"
                android:textSize="15dp"
                android:text="@string/ok"/>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>