<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_login_page"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginRight="10dp"
        android:gravity="right">
        <ImageView
            android:id="@+id/navigation_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/navigation_menu"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/wholesale"
            android:textColor="#434343"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_background_new"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:background="@color/loginBackground">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/user_icon" />

            </RelativeLayout>

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:paddingLeft="15dp"
                android:hint="@string/userName"
                android:background="@null"
                android:inputType="textNoSuggestions"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_background_new">

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/loginBackground">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/password_icon" />

            </RelativeLayout>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20dp"
                android:maxLength="40"
                android:hint="@string/password"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:background="@null"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/loginBackground"
                android:gravity="center"
                android:singleLine="true"
                android:onClick="userLogin"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text = "@string/forgetPassword"
            android:textColor="@color/loginBackground"
            android:textSize="@dimen/forget_password" />

    </LinearLayout>

</RelativeLayout>